Fixed side menu visibility on dashboard (by ch1138)

--- a/assets/src/scss/layout/_main-menu.scss
+++ b/assets/src/scss/layout/_main-menu.scss
@@ -9,6 +9,7 @@
     overflow-y: auto;
     top:0px;
     left:0px;
+    z-index: 1000;
 
     ul {
         list-style: none;
